...
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:weightSum="4">

        <LinearLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:weightSum="2">
...
                    android:text="@string/next_pokemon"
                    android:textColor="#ffffffff">

            </Button>

            <Button
                    android:id="@+id/goBack"
                    interactionEnabled="@{model.interactionEnabled}"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/back"
                    android:textColor="#ffffffff">

            </Button>
        </LinearLayout>

        <ImageView
                android:id="@+id/wildPokemon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1" />


...
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/backgrounds/scenic[2]" />

        <ImageView
                android:id="@+id/pokemonImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1" />


        <TextView
                android:id="@+id/availablePokeballs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@{String.format("PokeBall: %s",model.availablePokeballs)}' />

        <LinearLayout
                android:id="@+id/bottomBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:orientation="horizontal">

...
                    android:text="@string/attack"
                    android:textColor="#ffffffff">

            </Button>

            <Button
                    android:id="@+id/catchButton"
                    interactionEnabled="@{model.interactionEnabled &amp;&amp; model.availablePokeballs > 0}"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/catch_button"
...
