<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10"
...
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

    <EditText
            android:id="@+id/LoginTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
...
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

    <EditText
            android:id="@+id/NameTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
...
            android:gravity="center"
            android:text="@string/surname"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

    <EditText
            android:id="@+id/SurnameTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
...
            android:gravity="center"
            android:text="@string/password"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

    <EditText
            android:id="@+id/PasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword" />

    <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshape"
            android:onClick="createNewUser"
...
