...
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:ems="10"
            android:inputType="textPassword" />

    <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshape"
            android:onClick="startPokemonViewActivity"
            android:text="@string/login_button_text"
            android:textColor="#ffffffff" />

    <Button
            android:id="@+id/newUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshape"
            android:onClick="createNewUserActivity"
...
