<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical"
        android:padding="10dp">

    <ListView
            android:id="@+id/pokemonListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>